# WindWorldWire

./: .gitignore  BASIC_TRENDER_TESTS_SUMMARY.py  DEMO_CHARLIE_KIRK_RESULTS.txt  PIPELINE_ORCHESTRATOR_COMPLETE.py  REPOSITORY_FUNCTIONS_SUMMARY.py  TRENDER_API_SUMMARY.py  TRENDING_PARAMETERS_SUMMARY.py  VERIFICATION_RESULTS_FINAL.py  demo_charlie_kirk.py  pipeline_demo_structure.py  simple_test_runner.py  test_basic_trender_runner.py  test_pipeline_simple.py  test_repository_functions.py  test_trender_api.py  trender_api_testing_guide.py  trending_verification_checklist.py
newsbot/: .env.example  .gitignore  ADVANCED_TOPICS_IMPLEMENTATION.md  CONTRIBUTING.md  DEMO_LIVE_RESULTS.txt  Dockerfile  LICENSE  MODELS_UPDATE_SUMMARY.md  README.md  README_Enhanced_RSS.md  README_Normalizer.md  README_REWRITER.md  README_SimHash.md  RSS_ENHANCEMENT_SUMMARY.md  RSS_INGESTOR_SUMMARY.md  SCORING_IMPLEMENTATION_SUMMARY.md  VERIFICATION.md  demo_complete_workflow.py  demo_enhanced_rss.py  demo_normalization.py  demo_pipeline_orchestrator.py  demo_rewriter_live.py  demo_rss.py  demo_scoring.py  demo_selection_final.py  demo_simhash.py  demo_topics.py  docker-compose.yml  local_verification_checklist.py  pipeline_demo.py  pyproject.toml  pytest.ini  requirements-rewriter.txt  ruff.toml  test_api.py  test_enhanced_rss.py  test_integration.py  test_models.py  test_normalization.py  test_normalizer.py  (+8 more)
newsbot/.github/workflows/: ci-cd.yml  ci.yml  security.yml
newsbot/config/: TRENDING_PARAMETERS.md  policies.yaml  sources.yaml  topics.yaml
newsbot/infra/: docker-compose.yml
newsbot/infra/docker/: Dockerfile.base  Dockerfile.service  nginx.conf
newsbot/newsbot/: __init__.py
newsbot/newsbot/core/: __init__.py  database.py  db.py  logging.py  models.py  repositories.py  settings.py  simhash.py  time.py  utils.py
newsbot/newsbot/ingestor/: app.py  normalizer.py  pipeline.py  rss.py
newsbot/newsbot/mediaer/: app.py
newsbot/newsbot/publisher/: app.py
newsbot/newsbot/rewriter/: __init__.py  app.py  llm_provider.py  models.py  seo_rewriter.py  template_renderer.py  validators.py
newsbot/newsbot/services/: base.py
newsbot/newsbot/services/ingestor/: __init__.py  main.py
newsbot/newsbot/services/mediaer/: __init__.py  main.py
newsbot/newsbot/services/publisher/: __init__.py  main.py
newsbot/newsbot/services/rewriter/: __init__.py  main.py
newsbot/newsbot/services/trender/: __init__.py  main.py
newsbot/newsbot/services/watchdog/: __init__.py  main.py
newsbot/newsbot/trender/: __init__.py  app.py  cluster.py  pipeline.py  score.py  selector.py  selector_final.py  topics.py
newsbot/newsbot/watchdog/: app.py
newsbot/scripts/: __init__.py  init.sql  seed.py
newsbot/tests/: test_healthz.py  test_ingestor_rss.py  test_pipeline_orchestrator.py  test_rewriter_integration.py  test_selector_final.py  test_topics_advanced.py  test_trender_basic.py  test_trender_score.py
prompts/: seo.md
